fixes scrolling issue for main page, content is not clipped, background extends fully and no longer reveals differently styled html background on scroll

--- a/src/index.css
+++ b/src/index.css
@@ -2,23 +2,26 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
 
-html {
+/* html {
   height: 100%;
-  background-color: #ff6600;
+  
   max-width: 100%;
   overflow-x: hidden;
-  --current-background: #ff6600;
-}
+} */
 
-body {
-  height: 100%;
-  /* background-color: var(--current-background); */
-  /*! replace first color in gradient with yellow??? */
+html, body {
+  min-height: 100vh;
+  margin: 0;
+  overflow-x: hidden;
+  overscroll-behavior: contain;
   background: linear-gradient(300deg, #ff001a, #ff6600, #ffe500);
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
-  max-width: 100%;
-  overflow-x: hidden;
+}
+
+.wrapper {
+  position: relative;
+  min-height: 100vh;
 }
 
 @keyframes gradient-animation {
@@ -126,12 +129,15 @@ body {
   }
 
   #main-section {
-    padding-top: 25%;
+    /* padding-top: 25%; */
     text-align: right;
-    height: 100%;
+    min-height: 100vh;
     /* padding-right: 55px; */
-    padding-right: 17.5%;
+    /* padding-right: 17.5%; */
     padding-bottom: 50%;
+    position: absolute;
+    top: 20%;
+    right: 17.5%;
   }
 
   #main-container {
@@ -975,7 +981,7 @@ body {
 
 /*? *********************************************************************************************************************************  */
 
-@media (min-width: 610px) {
+@media (min-width: 768px) {
   
 }
 
